--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "laravel-echo": "^1.4.0",
     "moment": "^2.22.2",
-    "pusher-js": "^4.2.2"
+    "pusher-js": "^4.2.2",
+    "vuex": "^3.0.1"
   }
 }
